# simple_genetic

./: Cargo.toml  README.MD
src/: lib.rs  main.rs
src/simple_genetic/: activations.rs  agent.rs  fitness.rs  mod.rs
tests/: integration_test.rs
