[package]
name ="simple_genetic"
version = "0.2.0"
edition = "2021"
authors = ["ValpsZ"]
license = "MIT"
description = "A crate to aid with genetic learning"
homepage = "https://github.com/ValpsZ/simple_genetic"
repository = "https://github.com/ValpsZ/simple_genetic"
readme = "README.md"

[lib]
name = "simple_genetic"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
rand = "0.8.5"